--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "uataq-home"
-include: ["status.html", "favicon.ico"]
+include: ["historic_co2.html", "status.html", "favicon.ico"]
 exclude: ["data"]
 output:
   html_document:
