Use non-self-contained rendering for HTTPS

--- a/_site.yml
+++ b/_site.yml
@@ -1,8 +1,7 @@
 name: uataq
 include:
-- historic-co2.html
-- status.html
 - favicon.ico
+- _data.rds
 output:
   html_document:
     css: styles.css
